# seedloom

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: schema.sql
seedloom/: cli.py  config.py  generator.py  graph.py  inserter.py  introspect.py  mcp_server.py  models.py  pipeline.py
seedloom/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
tests/: test_generator.py  test_graph.py  test_integration.py  test_pipeline.py
